--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -10,6 +10,7 @@ Size=550,680
 Collapsed=0
 
 [Window][DockSpace Demo]
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -30,12 +31,13 @@ Size=92,48
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1116,314
+ViewportPos=569,252
 ViewportId=0x1C33C293
-Size=449,701
+Size=1217,701
 Collapsed=0
 
 [Docking][Data]
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=164,206 Size=1280,701 CentralNode=1
 DockSpace   ID=0xFA06BC56 Pos=190,232 Size=1280,701 Split=X
   DockNode  ID=0x00000003 Parent=0xFA06BC56 SizeRef=778,701 CentralNode=1
   DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=500,701
