--- a/Hazelnut/imgui.ini
+++ b/Hazelnut/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1920,1017
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,18 +10,33 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=0,19
-Size=834,701
+Size=1552,998
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Settings]
-Pos=836,19
-Size=444,701
+Pos=1554,19
+Size=366,998
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Scene Hierarchy]
+Pos=705,99
+Size=156,420
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=650,21
+Size=550,680
+Collapsed=0
+
+[Window][Properties]
+Pos=983,211
+Size=417,261
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=60,102 Size=1280,701 Split=X Selected=0x995B0CF8
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=1474,701 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=444,701 Selected=0x1C33C293
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=0,42 Size=1920,998 Split=X Selected=0x995B0CF8
+  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=912,701 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=366,701 Selected=0x1C33C293
 
