--- a/Hazelnut/imgui.ini
+++ b/Hazelnut/imgui.ini
@@ -1,16 +1,16 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1017
+Size=32,32
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=291,283
 Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=0,19
-Size=1552,998
+Pos=12,19
+Size=10,13
 Collapsed=0
 DockId=0x00000001,0
 
@@ -21,9 +21,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Hierarchy]
-Pos=705,99
-Size=156,420
+Pos=24,19
+Size=8,6
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Dear ImGui Demo]
 Pos=650,21
@@ -31,12 +32,25 @@ Size=550,680
 Collapsed=0
 
 [Window][Properties]
-Pos=983,211
-Size=417,261
+Pos=24,27
+Size=8,5
 Collapsed=0
+DockId=0x00000009,0
+
+[Window][Stats]
+Pos=0,19
+Size=10,13
+Collapsed=0
+DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=0,42 Size=1920,998 Split=X Selected=0x995B0CF8
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=912,701 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=366,701 Selected=0x1C33C293
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=138,180 Size=32,13 Split=X Selected=0x995B0CF8
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=921,701 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=181,701 Selected=0x968648AE
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=738,701 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=912,701 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=366,701 Selected=0x1C33C293
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=357,701 Split=Y Selected=0x9A68760C
+    DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=156,351 Selected=0x9A68760C
+    DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=156,348 Selected=0xC89E3217
 
