--- a/Hazelnut/imgui.ini
+++ b/Hazelnut/imgui.ini
@@ -17,9 +17,9 @@ DockId=0x00000004,0
 
 [Window][Viewport]
 Pos=372,24
-Size=993,876
+Size=993,469
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000009,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
@@ -45,14 +45,22 @@ Size=233,876
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Content Browser]
+Pos=372,495
+Size=993,405
+Collapsed=0
+DockId=0x0000000B,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=190,196 Size=1600,876 Split=X Selected=0x995B0CF8
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1365,1094 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=370,696 Split=Y Selected=0x9A68760C
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=593,322 Selected=0x9A68760C
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=593,372 Selected=0xC89E3217
-    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=993,696 Split=X
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=958,701 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=272,701 Selected=0x1C33C293
-  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=233,1094 Selected=0x968648AE
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=214,79 Size=1600,876 Split=X Selected=0x995B0CF8
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1365,1094 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=370,696 Split=Y Selected=0x9A68760C
+      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=593,322 Selected=0x9A68760C
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=593,372 Selected=0xC89E3217
+    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=993,696 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=958,701 Split=Y Selected=0x995B0CF8
+        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=1192,469 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+        DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=1192,405 Selected=0x371352B7
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=272,701 Selected=0x1C33C293
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=233,1094 Selected=0x968648AE
 
